# zcnn

./: .gitignore  CMakeLists.txt  README.md
example/: mobilenet.cpp  mobilenetssd.cpp  yolov3_tiny.cpp  yolov4.cpp
models/: mobilenet_ssd_voc_ncnn.param
src/: allocator.cpp
tests/: CMakeLists.txt
tests/mobilenetssd_linux/: CMakeLists.txt
tools/: distance.py
tools/aciq/: conculate.py
tools/dataset_sample/: sample.py
tools/map/: CalculateMap.py  out.txt  out_int8.txt  pre-cls.py  val.txt
tools/map/pred_out/: aeroplane.txt  bicycle.txt  bird.txt  boat.txt  bottle.txt  bus.txt  car.txt  cat.txt  chair.txt  cow.txt  diningtable.txt  dog.txt  horse.txt  motorbike.txt  person.txt  pottedplant.txt  sheep.txt  sofa.txt  train.txt  tvmonitor.txt
tools/map/pred_out_int8/: aeroplane.txt  bicycle.txt  bird.txt  boat.txt  bottle.txt  bus.txt  car.txt  cat.txt  chair.txt  cow.txt  diningtable.txt  dog.txt  horse.txt  motorbike.txt  person.txt  pottedplant.txt  sheep.txt  sofa.txt  train.txt  tvmonitor.txt
